--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,8 +100,8 @@ jobs:
     - name: Init PyUpdater
       run: python ./.CI/prepare_files.py
       env:
-        PYU_AWS_BUCKET: ${{ secrets.PYU_AWS_BUCKET }}
-        PYU_AWS_BUCKET_REGION: ${{ secrets.PYU_AWS_BUCKET_REGION }}
+        PYU_AWS_BUCKET: ethz-document-fetcher-pyupdater
+        PYU_AWS_BUCKET_REGION: eu-central-1
         PYU_AWS_ID: ${{ secrets.PYU_AWS_ID }}
         PYU_AWS_SECRET: ${{ secrets.PYU_AWS_SECRET }}
 
@@ -143,8 +143,8 @@ jobs:
     - name: Upload PyUpdater Data
       run: python ./.Ci/upload_pyuppdate_data.py
       env:
-        PYU_AWS_BUCKET: ${{ secrets.PYU_AWS_BUCKET }}
-        PYU_AWS_BUCKET_REGION: ${{ secrets.PYU_AWS_BUCKET_REGION }}
+        PYU_AWS_BUCKET: ethz-document-fetcher-pyupdater
+        PYU_AWS_BUCKET_REGION: eu-central-1
         PYU_AWS_ID: ${{ secrets.PYU_AWS_ID }}
         PYU_AWS_SECRET: ${{ secrets.PYU_AWS_SECRET }}
 
