--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,10 +42,10 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'
+        python-version: '3.9'
         architecture: 'x64'
 
     - name: Upgrade pip
@@ -69,14 +69,14 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Cache pip (Windows)
-      uses: actions/cache@v2
-      if: startsWith(runner.os, 'windows')
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+#    - name: Cache pip (Windows)
+#      uses: actions/cache@v2
+#      if: startsWith(runner.os, 'windows')
+#      with:
+#        path: ~\AppData\Local\pip\Cache
+#        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+#        restore-keys: |
+#          ${{ runner.os }}-pip-
 
     - name: Install dependencies
       run: |
