--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        pip install wheel -U
         pip install PyUpdater==3.1.1 -U --no-deps
         pip install -r requirements.txt -U
         pip install boto3 -U
