--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ PyMuPDF
 PyQt5==5.15.2
 pyinstaller
 PyUpdater-S3-plugin
+appdirs>=1.4.3
+bsdiff4==1.1.5
+dsdev-utils>=1.0.4
+pynacl>=1.4.0
+stevedore>=1.30.1, <2.0
+urllib3>=1.24.1, <2.0
