--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -132,10 +132,11 @@ jobs:
     - name: Cryptographically Sign
       run: pyupdater pkg --sign --slit-version
 
-    - name: Upload Release
+    - name: Upload Release (Windows)
+      if: startsWith(matrix.os, 'windows')
       run: pyupdater upload --service s3
       env:
-        PYU_AWS_BUCKET: ethz-document-fetcher-release
+        PYU_AWS_BUCKET: ethz-document-fetcher-win32
         PYU_AWS_BUCKET_REGION: eu-central-1
         PYU_AWS_ID: ${{ secrets.PYU_AWS_ID }}
         PYU_AWS_SECRET: ${{ secrets.PYU_AWS_SECRET }}
