--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   check_release:
-#    if: (github.event_name == 'push' && github.ref == 'refs/heads/master')
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/master')
     name: Check Release
     runs-on: ubuntu-latest
     outputs:
@@ -29,7 +29,7 @@ jobs:
 
   build:
     needs: check_release
-#    if: (needs.check_release.outputs.latest_release != needs.check_release.outputs.current_version)
+    if: (needs.check_release.outputs.latest_release != needs.check_release.outputs.current_version)
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
