--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,19 +108,19 @@ jobs:
       shell: cmd
       run: |
         set /p VERSION=<version.txt
-        pyupdater build --app-version=%VERSION:~1% win.spec --pyinstaller-log-info --archive-format zip
+        pyupdater build --app-version=%VERSION:~1% win.spec --pyinstaller-log-info
 
     - name: Build (MacOS)
       if: startsWith(matrix.os, 'macos')
       run: |
         VERSION="$(cat version.txt)"
-        pyupdater build --app-version=${VERSION:1} mac.spec --pyinstaller-log-info --archive-format zip
+        pyupdater build --app-version=${VERSION:1} mac.spec --pyinstaller-log-info
 
     - name: Build (Ubuntu)
       if: startsWith(matrix.os, 'ubuntu')
       run: |
         VERSION="$(cat version.txt)"
-        pyupdater build --app-version=${VERSION:1} linux.spec --pyinstaller-log-info --archive-format zip
+        pyupdater build --app-version=${VERSION:1} linux.spec --pyinstaller-log-info
 
     - name: Unzip
       run: python .CI/unzip.py
