--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [macos-latest]
+#        os: [windows-latest, macos-latest, ubuntu-latest]
       fail-fast: false
 
     steps:
@@ -136,8 +137,8 @@ jobs:
       if: startsWith(matrix.os, 'macos')
       uses: actions/upload-artifact@v1
       with:
-        name: mac-debug-app.tar
-        path: pyu-data/deploy/ethz-document-fetcher-mac-1.5.0.tar
+        name: ethz-document-fetcher-mac-1.5.0.tar.gz
+        path: pyu-data/deploy/ethz-document-fetcher-mac-1.5.0.tar.gz
 
 #    - name: Upload Release (Windows)
 #      if: startsWith(matrix.os, 'windows')
