--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ PyQt5==5.15.2
 pyinstaller
 git+https://github.com/Digital-Sapphire/PyUpdater
 PyUpdater-S3-plugin
-multiprocessing-logging
+pywin32; sys_platform == 'win32'
